and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

November 14, 2014 - J.Apostolakis (geomnav-V10-00-13,14)
---------------------------------
- G4Navigator: Corrections for Exit Normal.

October 20, 2014 - G.Cosmo (geomnav-V10-00-12)
--------------------------
- Leave out changes in G4FieldPropagation.cc laying on the trunk...

October 18, 2014 - A.Dotti (geomnav-V10-00-11)
------------------------
- Code cleanup: removed unnecessary G4ThreadLocal in G4ReplicaNavigation.

August 25, 2014 - G.Cosmo  (geomnav-V10-00-10)
-------------------------
- Minor code cleanup.

August 22, 2014 - M.Asai  (geomnav-V10-00-08 and geomnav-V10-00-09)
------------------------
- G4TransportationManager: Add ClearParallelWorlds() method. This method is
  invoked by G4RunManager when user destroys all the geometry and rebuild
  from scratch.

June  24, 2014 - G.Folger  (geomnav-V10-00-07)
-------------------------
- G4MultiNavigator: set 'fIdNavLimiting' index to navigator limiting the step,
  if only one navigator limited the step. Fixes crash in RE05 on Windows.
  Likely addressing problem report #1634.

May   27, 2014 - J.Apostolakis  (geomnav-V10-00-06)
------------------------------
- G4Navigator: corrected saving/restoring of 'navigator state':
  * Added bool sWasLimitedByGeometry to G4SaveNavigatorState struct
     ( fixes side effect of call to ComputeSafety. )
  * Corrected RestoreState() to reset the Safety Origin and Value
  * ComputeSafety: If at endpoint of step, answer safety=0.0 quickly.
       Do not save/restore state. 
- G4PropagatorInField:
  * Added new method GetCurrentEquationOfMotion() 

May   16, 2014 - J.Apostolakis  (geomnav-V10-00-05)
------------------------------