@@ -38,6 +38,10 @@
 #include "G4ErrorPropagatorData.hh"
 #include "G4ErrorSurfaceTarget.hh"
 
+#include "G4ErrorPlaneSurfaceTarget.hh"
+#include "G4ErrorCylSurfaceTarget.hh"
+
+
 //-------------------------------------------------------------------
 
 G4ErrorPropagationNavigator::G4ErrorPropagationNavigator()
@@ -147,4 +151,61 @@ ComputeSafety( const G4ThreeVector &pGlobalpoint,
     }
   }
   return newSafety;
-} 
+}
+
+G4ThreeVector G4ErrorPropagationNavigator::
+GetGlobalExitNormal(const G4ThreeVector& point, G4bool* valid)
+{
+  G4ErrorPropagatorData *g4edata
+        = G4ErrorPropagatorData::GetErrorPropagatorData();
+  const G4ErrorTarget* target = 0;
+
+  G4ThreeVector normal(0.0, 0.0, 0.0);
+  G4double      distance= 0;
+  
+  // Determine which 'geometry' limited the step
+  if (g4edata)
+  {
+    target = g4edata->GetTarget();
+    if(target)
+    {
+      distance = target->GetDistanceFromPoint(point);
+    }
+  }
+  if( distance > kCarTolerance )
+  {
+    normal= G4Navigator::GetGlobalExitNormal(point, valid);
+  }
+  else
+  {
+    // target->GetType();
+    switch( target->GetType() )
+    {
+      case G4ErrorTarget_GeomVolume:
+        // The volume is in the 'real' mass geometry
+        normal= G4Navigator::GetGlobalExitNormal(point, valid);
+        break;
+      case G4ErrorTarget_TrkL:
+        normal= G4ThreeVector( 0.0, 0.0, 0.0);
+        *valid= false;
+        G4Exception("G4ErrorPropagationNavigator::GetGlobalExitNormal", "Geometry:003", JustWarning, "Unexpected value of Target type");
+        break;
+      case G4ErrorTarget_PlaneSurface:
+      case G4ErrorTarget_CylindricalSurface:
+        const G4ErrorSurfaceTarget* surfaceTarget=
+          static_cast<const G4ErrorSurfaceTarget*>(target);
+        normal= surfaceTarget->GetTangentPlane(point).normal();
+        *valid= true;
+        break;
+
+//      default:
+//        normal= G4ThreeVector( 0.0, 0.0, 0.0);
+//        *valid= false;
+//        G4Exception("G4ErrorPropagationNavigator::GetGlobalExitNormal", "Geometry:003", FatalException, "Impossible value of Target type");
+//        exit(1);
+//        break;
+    }
+  }
+  return normal;
+}
+
